feat(vCluster): Added v2 api
