# vcluster/tsp-output/@typespec/openapi3/openapi.v2.yaml
@@ -184,6 +184,12 @@ paths:
           required: true
           schema:
             type: string
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+            maxLength: 64
       responses:
         '200':
           description: The request has succeeded.
@@ -203,8 +209,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Models.ErrorNotFound'
-    post:
+    patch:
       operationId: vClusterService_create
+      description: Create a new vCluster or update an existing one
       parameters:
         - name: namespace
           in: path
@@ -230,6 +237,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Models.ErrorNotFound'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  maxLength: 64
+                version:
+                  allOf:
+                    - $ref: '#/components/schemas/Models.vClusterVersion'
+                  default: Stable
+                values:
+                  type: object
+                  additionalProperties: {}
     delete:
       operationId: vClusterService_delete
       parameters:
@@ -257,6 +281,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Models.ErrorNotFound'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  maxLength: 64
   /kubernetes/{namespace}/vcluster/kubeconfig:
     get:
       operationId: vClusterService_kubeconfig
@@ -271,9 +305,12 @@ paths:
           required: true
           schema:
             type: string
-        - $ref: '#/components/parameters/Models.KubeconfigOptions.insecure'
-        - $ref: '#/components/parameters/Models.KubeconfigOptions.publicK8sEndpoint'
-        - $ref: '#/components/parameters/Models.KubeconfigOptions.certificateAuthorityData'
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+            maxLength: 64
       responses:
         '200':
           description: The request has succeeded.
@@ -418,10 +455,17 @@ components:
           minLength: 1
           maxLength: 64
         version:
-          type: string
-          enum:
-            - 0.19.5
-            - 0.20.0-beta.9
+          $ref: '#/components/schemas/Models.vClusterVersion'
+        values:
+          type: object
+          additionalProperties: {}
+    Models.vClusterVersion:
+      type: string
+      enum:
+        - Stable
+        - Local
+        - 0.19.6
+        - 0.20.0-beta.9
     Versions:
       type: string
       enum:
